test/tests/stages/18_structures/invalid_parse/struct_decl_tag_kw.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  struct
  for
  {
  int
  identifier(a)
  ;
  }
  ;
